# slua

./: .dockerignore  .gitignore  ARES.bt  CMakeLists.txt  Dockerfile  LICENSE.txt  LuauBytecode.bt  MERGING.md  Makefile  README.md  SECURITY.md  Sources.cmake  autobuild.xml  build-cmd.sh  builtins.txt  compose.yaml  init_debian_buster.sh
.github/workflows/: build.yml  build_release.yml  new-release.yml  release.yml  slua_bundle.yml
Analysis/src/: BuiltinDefinitions.cpp
Ast/src/: Parser.cpp
CLI/src/: Compile.cpp  LSLBuiltins.cpp  Repl.cpp  Web.cpp  builtins_embedded.h.in
CLI/test/: Web.test.js
CodeGen/src/: CodeGenUtils.cpp
Compiler/include/: luacode.h
Compiler/src/: Builtins.cpp  (+5 more)
fuzz/: CMakeLists.txt  ares_serialize.cpp  gsub.cpp  pattern.dict
rfcs/: lsl_state_handling.md  prevent-serialized-iterator-invalidation.md  static-require-bundle.md
serialize_examples/: buffer.lua  closure.lua  table.lua  thread.lua
tests/: Compiler.test.cpp  Conformance.test.cpp  IrLowering.test.cpp  LSL.test.cpp  LSLCompiler.test.cpp  RequireByString.test.cpp  SLConformance.test.cpp  main.cpp
tools/: fixedgraph.py  gen_primparams_methods.py  graphanalyze.py  heapgraph.py  heapsnapshot.py
tools/slua_bundle/: README.md  pyproject.toml
tools/slua_bundle/slua_bundle/: __init__.py  bundler.py  canonicalize.py  cli.py  errors.py  extractor.py  fs.py  luaurc.py  resolver.py  runtime.py
tools/slua_bundle/tests/: _helpers.py  test_bundler.py  test_canonicalize.py  test_disk_fs.py  test_e2e.py  test_extractor.py  test_memory_fs.py  test_resolver.py  test_runtime.py
(+181 files in other folders)
